hphp/hack/test/typecheck/ambiguous_declaration_interface_trait.php.exp
File "ambiguous_declaration_interface_trait.php", line 9, characters 7-7:
This class must be declared abstract, or provide an implementation for the abstract method 'foo' (Typing[4047])
File "ambiguous_declaration_interface_trait.php", line 6, characters 28-30:
Declaration is here
